--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
+    "react-native-swiper": "^1.5.12",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
